Add ScoreSquash icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11014,4 +11014,5 @@
 	<item component="ComponentInfo{com.showmax.app/com.showmax.app.feature.uiFragments.mobile.UIFragmentsActivity}" drawable="showmax" />
 	<item component="ComponentInfo{com.theathletic/com.theathletic.activity.SplashActivity}" drawable="the_athletic" />
 	<item component="ComponentInfo{com.uptodown/com.uptodown.activities.MainActivityScrollable}" drawable="uptodown_app_store" />
+	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash" />
 </resources>
