--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -45,6 +45,7 @@
 	<item drawable="walli" />
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
+	<item drawable="scoresquash" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
