--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -2,77 +2,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:targetApi="25">
 
-
-    <!-- Shortcut For Apply -->
+    <!-- Shortcut for Apply -->
     <shortcut
         android:enabled="true"
-        android:icon="@drawable/ic_shortcut_apply"
+        android:icon="@drawable/ic_drawer_apply"
         android:shortcutId="nav_apply"
         android:shortcutShortLabel="@string/navigation_view_apply">
-
-        <!-- Make sure to check targetPackage and targetClass (below) it match to your app package name
-        * If one of them doesn't match with your app package name, shortcut will not works -->
-
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="website.leifs.delta"
             android:targetClass="website.leifs.delta.activities.MainActivity">
-
             <extra
                 android:name="position"
                 android:value="1" />
-
         </intent>
-
         <categories android:name="android.shortcut.conversation" />
     </shortcut>
 
-
-    <!-- Shortcut For Icon Request -->
-    <!--<shortcut
+    <!-- Shortcut for Icon Request -->
+    <shortcut
         android:enabled="true"
-        android:icon="@drawable/ic_shortcut_request"
+        android:icon="@drawable/ic_drawer_request"
         android:shortcutId="nav_request"
         android:shortcutShortLabel="@string/navigation_view_request">
-
-        &lt;!&ndash; Make sure to check targetPackage and targetClass (below) it match to your app package name
-        * If one of them doesn't match with your app package name, shortcut will not works &ndash;&gt;
-
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="website.leifs.delta"
             android:targetClass="website.leifs.delta.activities.MainActivity">
-
             <extra
                 android:name="position"
                 android:value="3" />
-
         </intent>
-
         <categories android:name="android.shortcut.conversation" />
-    </shortcut>-->
+    </shortcut>
 
-    <!-- Shortcut For Wallpapers -->
+    <!-- Shortcut for Wallpapers -->
     <shortcut
         android:enabled="true"
-        android:icon="@drawable/ic_shortcut_wallpapers"
+        android:icon="@drawable/ic_drawer_wallpapers"
         android:shortcutId="nav_wallpapers"
         android:shortcutShortLabel="@string/navigation_view_wallpapers">
-
-        <!-- Make sure to check targetPackage and targetClass (below) it match to your app package name
-        * If one of them doesn't match with your app package name, shortcut will not works -->
-
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="website.leifs.delta"
             android:targetClass="website.leifs.delta.activities.MainActivity">
-
             <extra
                 android:name="position"
                 android:value="4" />
-
         </intent>
-
         <categories android:name="android.shortcut.conversation" />
     </shortcut>
 </shortcuts>
