add a new entry in FAQ

--- a/app/src/main/res/values/dashboard_faqs.xml
+++ b/app/src/main/res/values/dashboard_faqs.xml
@@ -55,6 +55,7 @@
         <item>Why is Access Wifi State permission needed?</item>
         <item>Why is Set Wallpaper permission needed?</item>
         <item>Why is Wake Lock Permission needed?</item>
+        <item>Who is that smoking penguin in the left menu?</item>
     </string-array>
 
     <string-array name="answers">
@@ -100,5 +101,6 @@
         <item>It is used to check if your phone has an internet connection to a wifi or not, to load cloud wallpapers from Muzei.</item>
         <item>It is used to apply wallpapers directly from the dashboard app.</item>
         <item>It is used by Muzei Live Wallpaper</item>
+        <item>You wouldn\'t get it</item>
     </string-array>
 </resources>
