--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10986,7 +10986,7 @@
 	<item component="ComponentInfo{com.android1500.gpssetter/com.android1500.gpssetter.ui.MapActivity}" drawable="gps_setter" />
 	<item component="ComponentInfo{app.lawnchair.debug/app.lawnchair.LawnchairLauncher}" drawable="lawnchair_launcher" />
 	<item component="ComponentInfo{com.marinetraffic.android/com.marinetraffic.android.AIRAppEntry}" drawable="marinetraffic" />
-	<item component="ComponentInfo{com.safaricom.mpesa.lifestyle/com.mpesa.splash.SplashActivity}" drawable="m-pesa" />
+	<item component="ComponentInfo{com.safaricom.mpesa.lifestyle/com.mpesa.splash.SplashActivity}" drawable="m_pesa" />
 	<item component="ComponentInfo{yuku.alkitab/yuku.alkitab.base.IsiActivity}" drawable="alkitab" />
 	<item component="ComponentInfo{ch.abertschi.adfree/ch.abertschi.adfree.view.MainActivity}" drawable="ad_free" />
 	<item component="ComponentInfo{com.github.helltar.anpaside/com.github.helltar.anpaside.activities.MainActivity}" drawable="anpaside" />
