add missing icons to drawable.xml... and remove missing icons from drawable.xml?

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3853,7 +3853,6 @@
 	<item component="ComponentInfo{com.intele.nsbmob.app/com.intele.nsbmob.app.activities.old.main.Splash}" drawable="nsb" />
 	<item component="ComponentInfo{com.intele.nsbmob.app/com.vy.StartupActivity}" drawable="nsb" />
 	<item component="ComponentInfo{com.intellectualflame.ledflashlight.washer/com.intellectualflame.ledflashlight.washer.FlashlightActivity}" drawable="flashlight" />
-	<item component="ComponentInfo{com.intermedia.hd.camera.pro/com.antafunny.burstcamera.MainActivity}" drawable="procam_x_alt" />
 	<item component="ComponentInfo{com.intermedia.hd.camera.pro/com.antafunny.burstcamera.MainActivity}" drawable="procam_x" />
 	<item component="ComponentInfo{com.internet.speed.meter.lite/com.internet.speed.meter.lite.MainActivity}" drawable="internet_speed_meter" />
 	<item component="ComponentInfo{com.internet.speed.meter/com.internet.speed.meter.lite.MainActivity}" drawable="internet_speed_meter" />
@@ -5810,7 +5809,7 @@
 	<item component="ComponentInfo{com.safariflow.queue/oreilly.queue.ContentNavigationActivity}" drawable="oreilly" />
 	<item component="ComponentInfo{com.safeincloud.free/com.safeincloud.EntryActivity}" drawable="safe__in__cloud" />
 	<item component="ComponentInfo{com.safeincloud/com.safeincloud.EntryActivity}" drawable="safe__in__cloud" />
-	<item component="ComponentInfo{com.saggitt.omega.dev/com.saggitt.omega.OmegaLauncher}" drawable="omegalauncher" />
+	<item component="ComponentInfo{com.saggitt.omega.dev/com.saggitt.omega.OmegaLauncher}" drawable="omega_launcher" />
 	<item component="ComponentInfo{com.saggitt.omega.neo/com.saggitt.omega.OmegaLauncher}" drawable="neo_launcher" />
 	<item component="ComponentInfo{com.saggitt.omega/com.saggitt.omega.OmegaLauncher}" drawable="neo_launcher" />
 	<item component="ComponentInfo{com.sagiadinos.garlic.player/com.sagiadinos.garlic.player.java.GarlicActivity}" drawable="garlic_player" />
