--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -49,6 +49,7 @@
 	<category title="Google" />
 	<item drawable="android_auto" />
 	<item drawable="android_device_policy" />
+	<item drawable="android_pay" />
 	<item drawable="android_system_webview" />
 	<item drawable="android_wear" />
 	<item drawable="android_wear_center" />
@@ -750,7 +751,6 @@
 	<item drawable="firefox_focus_alt_three" />
 	<item drawable="firefox_focus_alt_two" />
 	<item drawable="firefox_nightly_alt" />
-	<item drawable="flamingo_for_twitter_alt" />
 	<item drawable="flashscore_alt" />
 	<item drawable="flixbus_alt" />
 	<item drawable="flowwow_flowers_alt" />
@@ -785,6 +785,7 @@
 	<item drawable="harmonoid_alt" />
 	<item drawable="hevy_alt" />
 	<item drawable="homescapes_alt" />
+	<item drawable="hotspot_shield_alt" />
 	<item drawable="hsmwmobil_alt" />
 	<item drawable="iceraven_alt" />
 	<item drawable="ikea_home_smart_alt" />
@@ -794,7 +795,6 @@
 	<item drawable="instacart_alt" />
 	<item drawable="instacart_shopper_alt" />
 	<item drawable="instagram_alt" />
-	<item drawable="instagram_alt_three" />
 	<item drawable="instagram_alt_two" />
 	<item drawable="joox_alt" />
 	<item drawable="joplin_alt" />
@@ -803,7 +803,7 @@
 	<item drawable="k_nine_mail_alt" />
 	<item drawable="khan_academy_alt" />
 	<item drawable="kijiji_alt" />
-	<item drawable="lazada_alt_one" />
+	<item drawable="lazada_alt" />
 	<item drawable="lazada_alt_two" />
 	<item drawable="learn_anywhere_alt" />
 	<item drawable="learnneo_alt" />
@@ -830,6 +830,7 @@
 	<item drawable="medium_alt" />
 	<item drawable="medtronic_minimed_alt" />
 	<item drawable="medtronic_minimed_alt_two" />
+	<item drawable="meetic_alt" />
 	<item drawable="mega_alt" />
 	<item drawable="memrise_alt" />
 	<item drawable="mercari_alt" />
@@ -850,7 +851,9 @@
 	<item drawable="microsoft_remote_desktop_alt" />
 	<item drawable="microsoft_teams_alt" />
 	<item drawable="microsoft_word_alt" />
+	<item drawable="minerals_guide_plus_identifier_alt" />
 	<item drawable="mulch_alt" />
+	<item drawable="mull_alt" />
 	<item drawable="mupdf_alt" />
 	<item drawable="music_alt" />
 	<item drawable="music_alt_five" />
@@ -880,6 +883,7 @@
 	<item drawable="noto_futuristic" />
 	<item drawable="noto_purpleberry" />
 	<item drawable="noto_sanguinesun" />
+	<item drawable="omega_launcher_alt" />
 	<item drawable="omnicard_alt" />
 	<item drawable="ooni_probe_alt" />
 	<item drawable="openboard_alt" />
@@ -1156,7 +1160,6 @@
 	<item drawable="simple_launcher_red" />
 	<item drawable="simple_launcher_teal" />
 	<item drawable="simple_launcher_yellow" />
-	<item drawable="simple_music_player_alt" />
 	<item drawable="simple_notes_amber" />
 	<item drawable="simple_notes_blue" />
 	<item drawable="simple_notes_bluegrey" />
@@ -1300,6 +1303,7 @@
 	<item drawable="sonic_the_hedgehog_alt" />
 	<item drawable="stealth_alt" />
 	<item drawable="stellio_alt" />
+	<item drawable="stockx_alt" />
 	<item drawable="student_beans_alt" />
 	<item drawable="substratum_alt" />
 	<item drawable="subtitle_viewer_alt" />
@@ -1356,7 +1360,6 @@
 	<item drawable="yatse_alt" />
 	<item drawable="youtube_alt" />
 	<item drawable="youtube_gaming_alt" />
-	<item drawable="youtube_music_alt" />
 	<item drawable="youtube_music_vanced_alt" />
 	<item drawable="youtube_revanced_alt" />
 	<item drawable="youtube_studio_alt" />
@@ -1566,6 +1569,7 @@
 	<item drawable="aeroflot" />
 	<item drawable="aethersx2" />
 	<item drawable="aethersx2_custom" />
+	<item drawable="aetna" />
 	<item drawable="aetna_health" />
 	<item drawable="afas_pocket" />
 	<item drawable="affirm" />
@@ -1906,7 +1910,6 @@
 	<item drawable="asphalt_2" />
 	<item drawable="asphalt_8" />
 	<item drawable="asphalt_9" />
-	<item drawable="assist" />
 	<item drawable="assistant_for_android" />
 	<item drawable="assistive_touch" />
 	<item drawable="assoluto_racing" />
@@ -1917,6 +1920,7 @@
 	<item drawable="astro" />
 	<item drawable="astro_go" />
 	<item drawable="astrozeit24" />
+	<item drawable="asos" />
 	<item drawable="asus_mobile_manager" />
 	<item drawable="asus_quick_memo" />
 	<item drawable="asus_router" />
@@ -2074,13 +2078,12 @@
 	<item drawable="basecamp" />
 	<item drawable="baseus" />
 	<item drawable="basit" />
-	<item drawable="Battery Guru" />
+	<item drawable="battery_guru" />
 	<item drawable="battery_charge_limit" />
 	<item drawable="battery_doctor" />
 	<item drawable="batterybot" />
 	<item drawable="battle_prime" />
 	<item drawable="battlefield" />
-	<item drawable="battlefield_companion" />
 	<item drawable="battlenet" />
 	<item drawable="battlenet_authenticator" />
 	<item drawable="battlescribe" />
@@ -3112,7 +3115,6 @@
 	<item drawable="edmodo" />
 	<item drawable="educamos_familias" />
 	<item drawable="edupage" />
-	<item drawable="eduroam" />
 	<item drawable="edx" />
 	<item drawable="eero" />
 	<item drawable="efootball" />
@@ -3476,6 +3478,7 @@
 	<item drawable="freedroid" />
 	<item drawable="freeflight_mini" />
 	<item drawable="freeletics" />
+	<item drawable="freenow" />
 	<item drawable="freeotp" />
 	<item drawable="freeotp_plus" />
 	<item drawable="freepie_imu" />
@@ -3590,6 +3593,7 @@
 	<item drawable="gesetze_jura" />
 	<item drawable="get_mobile" />
 	<item drawable="getapps" />
+	<item drawable="geteduroam" />
 	<item drawable="getcontact" />
 	<item drawable="getir" />
 	<item drawable="gett" />
@@ -3655,6 +3659,7 @@
 	<item drawable="grammarly" />
 	<item drawable="granny_smith" />
 	<item drawable="graph_messenger" />
+	<item drawable="graphene_apps" />	
 	<item drawable="graspio" />
 	<item drawable="grasshopper" />
 	<item drawable="gratus" />
@@ -3731,7 +3736,6 @@
 	<item drawable="happy_wheels" />
 	<item drawable="happycow" />
 	<item drawable="happylighting" />
-	<item drawable="happymod" />
 	<item drawable="harmonic_for_hacker_news" />
 	<item drawable="harmonoid" />
 	<item drawable="harmony" />
@@ -3909,6 +3913,7 @@
 	<item drawable="the_home_depot" />
 
 	<category title="I" />
+	<item drawable="i_am_a_gryphon" />
 	<item drawable="i_am_sober" />
 	<item drawable="i_love_hue" />
 	<item drawable="i_love_hue_too" />
@@ -3985,6 +3990,7 @@
 	<item drawable="ing_smart_secure" />
 	<item drawable="ingress" />
 	<item drawable="injustice" />
+	<item drawable="innertune" />
 	<item drawable="inoreader" />
 	<item drawable="inpost" />
 	<item drawable="inputbridge" />
@@ -4259,10 +4265,12 @@
 	<item drawable="kwork" />
 	<item drawable="kyiv_digital" />
 	<item drawable="kyivstar" />
+	<item drawable="kyocera_print" />
 
 	<category title="L" />
 	<item drawable="la_mia_banca" />
 	<item drawable="la_poste" />
+	<item drawable="la_presse" />
 	<item drawable="labcoat" />
 	<item drawable="lantern" />
 	<item drawable="lanting" />
@@ -4404,6 +4412,7 @@
 	<item drawable="list_my_apps" />
 	<item drawable="listen" />
 	<item drawable="listen_moe" />
+	<item drawable="listonic" />	
 	<item drawable="listy" />
 	<item drawable="lithium_reader" />
 	<item drawable="litres" />
@@ -4515,7 +4524,6 @@
 	<item drawable="magicwidgets" />
 	<item drawable="magisk_manager" />
 	<item drawable="magtapp" />
-	<item drawable="mail" />
 	<item drawable="mail_com" />
 	<item drawable="mail_ru_news" />
 	<item drawable="mailchimp" />
@@ -4653,11 +4661,13 @@
 	<item drawable="meteored_weather" />
 	<item drawable="metriport" />
 	<item drawable="metro_chile" />
+	<item drawable="metro_music_player" />
 	<item drawable="metrobank_online" />
 	<item drawable="metropolis" />
 	<item drawable="meu_tim" />
 	<item drawable="meu_vivo" />
 	<item drawable="meu_vivo_fixo" />
+	<item drawable="mgit" />
 	<item drawable="mgts" />
 	<item drawable="mi__fit" />
 	<item drawable="mi__xplorer" />
@@ -4749,7 +4759,6 @@
 	<item drawable="minecraft_earth" />
 	<item drawable="mineo" />
 	<item drawable="minerals_guide_plus_identifier" />
-	<item drawable="minerals_guide_plus_identifier_alt" />
 	<item drawable="minesweeper_the_clean_one" />
 	<item drawable="minetest" />
 	<item drawable="mini_ism_kwgt" />
@@ -4855,6 +4864,7 @@
 	<item drawable="mortal_kombat" />
 	<item drawable="mosaic_art_lab" />
 	<item drawable="moscow_public_services" />
+	<item drawable="moshidon" />
 	<item drawable="mosmetro" />
 	<item drawable="mosparking" />
 	<item drawable="motion_learning_app" />
@@ -5085,6 +5095,7 @@
 	<item drawable="nebula" />
 	<item drawable="nebulo" />
 	<item drawable="nectar" />
+	<item drawable="nedbank" />
 	<item drawable="neko" />
 	<item drawable="neko_atsume" />
 	<item drawable="neko_samurai" />
@@ -5796,6 +5807,7 @@
 	<item drawable="prixtel" />
 	<item drawable="pro_metronome" />
 	<item drawable="probus_london" />
+	<item drawable="procam_x" />
 	<item drawable="proddy" />
 	<item drawable="producthunt" />
 	<item drawable="productivity" />
@@ -5945,6 +5957,7 @@
 	<item drawable="rbc" />
 	<item drawable="rboard" />
 	<item drawable="rcx" />
+	<item drawable="read" />
 	<item drawable="read_chan" />
 	<item drawable="read_only_memories_type_m" />
 	<item drawable="read_you" />
@@ -6168,6 +6181,7 @@
 	<item drawable="samsung_one_hand_operation_plus" />
 	<item drawable="samsung_pass" />
 	<item drawable="samsung_pay" />
+	<item drawable="samsung_pay_mini" />
 	<item drawable="samsung_pentastic" />
 	<item drawable="samsung_quick_mesure" />
 	<item drawable="samsung_reminder" />
@@ -6202,7 +6216,7 @@
 	<item drawable="sber_eapteka" />
 	<item drawable="sber_spasibo" />
 	<item drawable="sbi_card" />
-	<item drawable="SBPay" />
+	<item drawable="sbpay" />
 	<item drawable="scala" />
 	<item drawable="scalak" />
 	<item drawable="scanbot" />
@@ -6428,7 +6442,7 @@
 	<item drawable="slice" />
 	<item drawable="slice_pay" />
 	<item drawable="slickdeals" />
-	<item drawable="slicknewsletters" />
+	<item drawable="slick" />
 	<item drawable="slide" />
 	<item drawable="slide_fitness" />
 	<item drawable="slidebox" />
@@ -6488,6 +6502,7 @@
 	<item drawable="solid_explorer" />
 	<item drawable="solitaire" />
 	<item drawable="solitaire_decked_out" />
+	<item drawable="solitaire_the_clean_one" />
 	<item drawable="solitairecg" />
 	<item drawable="solo_launcher" />
 	<item drawable="sololearn" />
@@ -6640,6 +6655,7 @@
 	<item drawable="stocks_widget" />
 	<item drawable="stockx" />
 	<item drawable="stoic_mental_health_training" />
+	<item drawable="stoned_penguin" />
 	<item drawable="stoop" />
 	<item drawable="stop_motion_studio" />
 	<item drawable="storage_analyzer_and_disk_usage" />
@@ -6908,6 +6924,7 @@
 	<item drawable="the_wolf_stash" />
 	<item drawable="thefork" />
 	<item drawable="themediy" />
+	<item drawable="themer" />
 	<item drawable="themex" />
 	<item drawable="theory_test_uk" />
 	<item drawable="thimbleweed_park" />
@@ -7381,7 +7398,6 @@
 	<item drawable="vpnify" />
 	<item drawable="vpnunlimited" />
 	<item drawable="vqplayer" />
-	<item drawable="vr_media_player" />
 	<item drawable="vrr_app" />
 	<item drawable="vrv" />
 	<item drawable="vsauceify" />
@@ -7411,7 +7427,6 @@
 	<item drawable="walgreens" />
 	<item drawable="walk_band" />
 	<item drawable="wall_kickers" />
-	<item drawable="wall_x" />
 	<item drawable="wall_you" />
 	<item drawable="wallabag" />
 	<item drawable="wallapop" />
@@ -7711,6 +7726,7 @@
 	<item drawable="yono_lite_sbi" />
 	<item drawable="yono_sbi" />
 	<item drawable="yonomi" />
+	<item drawable="yoomoney" />
 	<item drawable="yota" />
 	<item drawable="you_brd" />
 	<item drawable="youcut_video_editor" />
