feat: add sai fdroid icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11015,4 +11015,5 @@
 	<item component="ComponentInfo{com.theathletic/com.theathletic.activity.SplashActivity}" drawable="the_athletic" />
 	<item component="ComponentInfo{com.uptodown/com.uptodown.activities.MainActivityScrollable}" drawable="uptodown_app_store" />
 	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash" />
+	<item component="ComponentInfo{com.aefyr.sai.fdroid/com.aefyr.sai.ui.activities.MainActivity}" drawable="sai_fdroid" />
 </resources>
