--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -46,6 +46,7 @@
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
 	<item drawable="scoresquash" />
+	<item drawable="sai_fdroid" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -6140,6 +6141,7 @@
 	<item drawable="sagon" />
 	<item drawable="sagon_circle" />
 	<item drawable="sai" />
+	<item drawable="sai_fdroid" />
 	<item drawable="saiko_no_sutoka" />
 	<item drawable="saikou" />
 	<item drawable="samokat" />
