feat: add forgetmenot icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11016,4 +11016,5 @@
 	<item component="ComponentInfo{com.uptodown/com.uptodown.activities.MainActivityScrollable}" drawable="uptodown_app_store" />
 	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash" />
 	<item component="ComponentInfo{com.aefyr.sai.fdroid/com.aefyr.sai.ui.activities.MainActivity}" drawable="sai_fdroid" />
+	<item component="ComponentInfo{com.odnovolov.forgetmenot/com.odnovolov.forgetmenot.presentation.common.mainactivity.MainActivity}" drawable="forgetmenot" />
 </resources>
