--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -47,6 +47,7 @@
 	<item drawable="zepp_life" />
 	<item drawable="scoresquash" />
 	<item drawable="sai_fdroid" />
+	<item drawable="forgetmenot" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3443,6 +3444,7 @@
 	<item drawable="forest" />
 	<item drawable="forex_com" />
 	<item drawable="forge_of_neon" />
+	<item drawable="forgetmenot" />
 	<item drawable="forkgram" />
 	<item drawable="forkyz" />
 	<item drawable="formula_1" />
