fix(icons/easy_xkcd): add svg and componentInfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11017,4 +11017,5 @@
 	<item component="ComponentInfo{scoresquash.ik/scoresquash.ik.MainActivity}" drawable="scoresquash" />
 	<item component="ComponentInfo{com.aefyr.sai.fdroid/com.aefyr.sai.ui.activities.MainActivity}" drawable="sai_fdroid" />
 	<item component="ComponentInfo{com.odnovolov.forgetmenot/com.odnovolov.forgetmenot.presentation.common.mainactivity.MainActivity}" drawable="forgetmenot" />
+	<item component="ComponentInfo{de.tap.easy_xkcd/de.tap.easy_xkcd.mainActivity.MainActivity}" drawable="easy_xkcd" />
 </resources>
