--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -48,6 +48,7 @@
 	<item drawable="scoresquash" />
 	<item drawable="sai_fdroid" />
 	<item drawable="forgetmenot" />
+	<item drawable="easy_xkcd" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
