--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -49,6 +49,7 @@
 	<item drawable="sai_fdroid" />
 	<item drawable="forgetmenot" />
 	<item drawable="easy_xkcd" />
+	<item drawable="private_location" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -5806,6 +5807,7 @@
 	<item drawable="privacy_dashboard" />
 	<item drawable="privacy_dots" />
 	<item drawable="privacy_indicators" />
+	<item drawable="private_location" />
 	<item drawable="privat_twentyfour" />
 	<item drawable="private_share" />
 	<item drawable="private_zone" />
