--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8748,7 +8748,7 @@
 	<item component="ComponentInfo{gr.openthesaurus.offline/gr.openthesaurus.offline.MainActivity}" drawable="openthesaurus" />
 	<item component="ComponentInfo{gr.openthesaurus/gr.openthesaurus.MainActivity}" drawable="openthesaurus" />
 	<item component="ComponentInfo{gr.winbank.mobilenext/gr.winbank.mobilenext.view.activities.SplashScreenActivity}" drawable="bank" />
-	<item component="ComponentInfo{gradient.wallpapers.maker.color.gradient.backgrounds/com.gradiantsetwallpaper.activity.SplashActivity}" drawable="gradient_maker" />
+	<item component="ComponentInfo{gradient.wallpapers.maker.color.gradient.backgrounds/com.gradiantsetwallpaper.activity.SplashActivity}" drawable="gradient_wallpaper_maker" />
 	<item component="ComponentInfo{grit.storytel.app/grit.storytel.app.MainActivity}" drawable="storytel" />
 	<item component="ComponentInfo{hannover.rider/via.rider.activities.HomeActivity}" drawable="sprinti" />
 	<item component="ComponentInfo{hashengineering.darkcoin.wallet/de.schildbach.wallet.ui.OnboardingActivity}" drawable="dash_wallet" />
@@ -10946,6 +10946,7 @@
 	<item component="ComponentInfo{rahmouni.neil.counters/rahmouni.neil.counters.MainActivity}" drawable="counters" />
 	<item component="ComponentInfo{com.goodwy.audiobooklite/com.goodwy.audiobooklite.features.MainActivity}" drawable="playbooks_lite" />
 	<item component="ComponentInfo{tk.hack5.treblecheck/tk.hack5.treblecheck.ScrollingActivity}" drawable="treble_info" />
+	<item component="ComponentInfo{tk.hack5.treblecheck/tk.hack5.treblecheck.ui.MainActivity}" drawable="treble_info" />
 	<item component="ComponentInfo{com.arlosoft.macrodroid.helper/com.arlosoft.macrodroid.helper.ui.HomeScreenActivity}" drawable="md_helper" />
 	<item component="ComponentInfo{com.pixelapestudios.bluk/com.pixelapestudios.bluk.RunnerActivity}" drawable="bluk" />
 	<item component="ComponentInfo{apps.ijp.coveros/apps.ijp.coveros.CoverOSSettings}" drawable="coverscreen_os" />
