--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11010,7 +11010,7 @@
 	<item component="ComponentInfo{com.nick.mowen.albatross/com.nick.mowen.albatross.main.MainActivity}" drawable="albatross" />
 	<item component="ComponentInfo{dev.leonlatsch.photok/dev.leonlatsch.photok.MainLauncher}" drawable="photok" />
 	<item component="ComponentInfo{com.piggybankng.piggy/com.piggybankng.piggy.SplashActivity}" drawable="piggyvest" />
-	<item component="ComponentInfo{com.prisma3d.prisma3d/com.prisma.prismaplugin.UnityPlayerActivityStatusBar}" drawable="prisma3d" />
+	<item component="ComponentInfo{com.prisma3D.prisma3D/com.prisma.prismaplugin.UnityPlayerActivityStatusBar}" drawable="prisma3d" />
 	<item component="ComponentInfo{com.mcu.reolink/com.android.bc.login.WelcomeActivity}" drawable="reolink" />
 	<item component="ComponentInfo{com.showmax.app/com.showmax.app.feature.uiFragments.mobile.UIFragmentsActivity}" drawable="showmax" />
 	<item component="ComponentInfo{com.theathletic/com.theathletic.activity.SplashActivity}" drawable="the_athletic" />
