--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11026,4 +11026,5 @@
 	<item component="ComponentInfo{com.android.MGC_8_6_263/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.iode.aperture/org.lineageos.aperture.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.nononsenseapps.feeder.play/com.nononsenseapps.feeder.ui.MainActivity}" drawable="feeder" />
+	<item component="ComponentInfo{com.looker.droidify.alpha/com.looker.droidify.MainActivity}" drawable="droid_ify" />
 </resources>
