fix diff drawables

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5807,8 +5807,8 @@
 	<item drawable="privacy_dashboard" />
 	<item drawable="privacy_dots" />
 	<item drawable="privacy_indicators" />
-	<item drawable="private_location" />
 	<item drawable="privat_twentyfour" />
+	<item drawable="private_location" />
 	<item drawable="private_share" />
 	<item drawable="private_zone" />
 	<item drawable="prixtel" />
@@ -6243,6 +6243,7 @@
 	<item drawable="scoober" />
 	<item drawable="scoop" />
 	<item drawable="score_hero" />
+	<item drawable="scoresquash" />
 	<item drawable="scotiabank" />
 	<item drawable="scotland_bank" />
 	<item drawable="scottrade" />
