new icon: Swellnet

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11027,4 +11027,5 @@
 	<item component="ComponentInfo{com.iode.aperture/org.lineageos.aperture.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.nononsenseapps.feeder.play/com.nononsenseapps.feeder.ui.MainActivity}" drawable="feeder" />
 	<item component="ComponentInfo{com.looker.droidify.alpha/com.looker.droidify.MainActivity}" drawable="droid_ify" />
+	<item component="ComponentInfo{com.app.swellnet/com.app.swellnet.MainActivity}" drawable="swellnet" />
 </resources>
