--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -38,6 +38,7 @@
 	<item drawable="prisma3d" />
 	<item drawable="reolink" />
 	<item drawable="showmax" />
+	<item drawable="swellnet" />
 	<item drawable="the_athletic" />
 	<item drawable="trivia_crack" />
 	<item drawable="uptodown_app_store" />
@@ -6750,6 +6751,7 @@
 	<item drawable="swarm_sim" />
 	<item drawable="sweat_wallet" />
 	<item drawable="sweatcoin" />
+	<item drawable="swellnet" />
 	<item drawable="swift__key" />
 	<item drawable="swift_backup" />
 	<item drawable="swift_installer" />
