new icon: Shiori

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11028,4 +11028,5 @@
 	<item component="ComponentInfo{com.nononsenseapps.feeder.play/com.nononsenseapps.feeder.ui.MainActivity}" drawable="feeder" />
 	<item component="ComponentInfo{com.looker.droidify.alpha/com.looker.droidify.MainActivity}" drawable="droid_ify" />
 	<item component="ComponentInfo{com.app.swellnet/com.app.swellnet.MainActivity}" drawable="swellnet" />
+	<item component="ComponentInfo{com.miraisoft.shiori/com.miraisoft.shiori.MainActivity}" drawable="shiori" />
 </resources>
