--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -20,6 +20,7 @@
 	<item drawable="permission_manager_x" />
 	<item drawable="qserv" />
 	<item drawable="secuso_minesweeper" />
+	<item drawable="shiori" />
 	<item drawable="tag_livros" />
 	<item drawable="xplora" />
 	<item drawable="adblock_browser" />
@@ -6330,6 +6331,7 @@
 	<item drawable="shell_terminal" />
 	<item drawable="shelter" />
 	<item drawable="shift_tracker" />
+	<item drawable="shiori" />
 	<item drawable="shizuku" />
 	<item drawable="shonen_jump" />
 	<item drawable="shonen_jump_plus" />
