new icon: Seterra

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -20,6 +20,7 @@
 	<item drawable="permission_manager_x" />
 	<item drawable="qserv" />
 	<item drawable="secuso_minesweeper" />
+	<item drawable="seterra" />
 	<item drawable="shiori" />
 	<item drawable="tag_livros" />
 	<item drawable="xplora" />
@@ -6305,6 +6306,7 @@
 	<item drawable="sesame" />
 	<item drawable="session" />
 	<item drawable="set_edit" />
+	<item drawable="seterra" />
 	<item drawable="settle_up" />
 	<item drawable="sgt_puzzles" />
 	<item drawable="shader_editor" />
