--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11029,4 +11029,5 @@
 	<item component="ComponentInfo{com.looker.droidify.alpha/com.looker.droidify.MainActivity}" drawable="droid_ify" />
 	<item component="ComponentInfo{com.app.swellnet/com.app.swellnet.MainActivity}" drawable="swellnet" />
 	<item component="ComponentInfo{com.miraisoft.shiori/com.miraisoft.shiori.MainActivity}" drawable="shiori" />
+	<item component="ComponentInfo{com.seterra/com.seterra.MainActivity}" drawable="seterra" />
 </resources>
