new icon: BetterSleep

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11030,4 +11030,5 @@
 	<item component="ComponentInfo{com.app.swellnet/com.app.swellnet.MainActivity}" drawable="swellnet" />
 	<item component="ComponentInfo{com.miraisoft.shiori/com.miraisoft.shiori.MainActivity}" drawable="shiori" />
 	<item component="ComponentInfo{com.seterra/com.seterra.MainActivity}" drawable="seterra" />
+	<item component="ComponentInfo{ipnossoft.rma.free/ipnossoft.rma.free.RelaxMelodiesActivityFree}" drawable="bettersleep" />
 </resources>
