--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,6 +8,7 @@
 	<item drawable="alkitab" />
 	<item drawable="ad_free" />
 	<item drawable="anpaside" />
+	<item drawable="bettersleep" />
 	<item drawable="burpy_walls" />
 	<item drawable="comviq" />
 	<item drawable="direct_express" />
@@ -2164,6 +2165,7 @@
 	<item drawable="better_internet_tiles" />
 	<item drawable="betteranime" />
 	<item drawable="betternet" />
+	<item drawable="bettersleep" />
 	<item drawable="between" />
 	<item drawable="bewakoof" />
 	<item drawable="bewet" />
