--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11031,4 +11031,5 @@
 	<item component="ComponentInfo{com.miraisoft.shiori/com.miraisoft.shiori.MainActivity}" drawable="shiori" />
 	<item component="ComponentInfo{com.seterra/com.seterra.MainActivity}" drawable="seterra" />
 	<item component="ComponentInfo{ipnossoft.rma.free/ipnossoft.rma.free.RelaxMelodiesActivityFree}" drawable="bettersleep" />
+	<item component="ComponentInfo{com.socialbella.soco/com.socialbella.soco.activity.SplashActivityClass}" drawable="soco" />
 </resources>
