--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -41,6 +41,7 @@
 	<item drawable="prisma3d" />
 	<item drawable="reolink" />
 	<item drawable="showmax" />
+	<item drawable="soco" />
 	<item drawable="swellnet" />
 	<item drawable="the_athletic" />
 	<item drawable="trivia_crack" />
@@ -6508,6 +6509,7 @@
 	<item drawable="snow" />
 	<item drawable="snow_icon" />
 	<item drawable="societe_generale" />
+	<item drawable="soco" />
 	<item drawable="soda" />
 	<item drawable="sofascore" />
 	<item drawable="sofi" />
