new icon: ViCare

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11032,4 +11032,5 @@
 	<item component="ComponentInfo{com.seterra/com.seterra.MainActivity}" drawable="seterra" />
 	<item component="ComponentInfo{ipnossoft.rma.free/ipnossoft.rma.free.RelaxMelodiesActivityFree}" drawable="bettersleep" />
 	<item component="ComponentInfo{com.socialbella.soco/com.socialbella.soco.activity.SplashActivityClass}" drawable="soco" />
+	<item component="ComponentInfo{com.viessmann.vicare/com.viessmann.vicare.mobile.login.LoginActivity}" drawable="vicare" />
 </resources>
