--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -46,6 +46,7 @@
 	<item drawable="the_athletic" />
 	<item drawable="trivia_crack" />
 	<item drawable="uptodown_app_store" />
+	<item drawable="vicare" />
 	<item drawable="waking_up" />
 	<item drawable="walli" />
 	<item drawable="zello" />
@@ -7341,6 +7342,7 @@
 	<item drawable="viber" />
 	<item drawable="vibrant_colors_kwgt" />
 	<item drawable="vibratemode" />
+	<item drawable="vicare" />
 	<item drawable="video_and_tv_sideview" />
 	<item drawable="video_downloader" />
 	<item drawable="video_downloader_ig" />
