--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11033,4 +11033,5 @@
 	<item component="ComponentInfo{ipnossoft.rma.free/ipnossoft.rma.free.RelaxMelodiesActivityFree}" drawable="bettersleep" />
 	<item component="ComponentInfo{com.socialbella.soco/com.socialbella.soco.activity.SplashActivityClass}" drawable="soco" />
 	<item component="ComponentInfo{com.viessmann.vicare/com.viessmann.vicare.mobile.login.LoginActivity}" drawable="vicare" />
+	<item component="ComponentInfo{com.bt.bms.lk/com.movie.bms.splashscreen.SplashScreenActivity}" drawable="bookmyshow" />
 </resources>
