new icon: PayPal Honey

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11034,4 +11034,5 @@
 	<item component="ComponentInfo{com.socialbella.soco/com.socialbella.soco.activity.SplashActivityClass}" drawable="soco" />
 	<item component="ComponentInfo{com.viessmann.vicare/com.viessmann.vicare.mobile.login.LoginActivity}" drawable="vicare" />
 	<item component="ComponentInfo{com.bt.bms.lk/com.movie.bms.splashscreen.SplashScreenActivity}" drawable="bookmyshow" />
+	<item component="ComponentInfo{com.joinhoney.honeyandroid/com.joinhoney.honeyandroid.SplashActivity}" drawable="paypal_honey" />
 </resources>
