--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -18,6 +18,7 @@
 	<item drawable="gridle" />
 	<item drawable="mintos" />
 	<item drawable="nova_video_player" />
+	<item drawable="paypal_honey" />
 	<item drawable="permission_manager_x" />
 	<item drawable="qserv" />
 	<item drawable="secuso_minesweeper" />
@@ -5545,6 +5546,7 @@
 	<item drawable="paymaya" />
 	<item drawable="paypal" />
 	<item drawable="paypal_business" />
+	<item drawable="paypal_honey" />
 	<item drawable="paypay" />
 	<item drawable="pbs_kids" />
 	<item drawable="pbs_video" />
