new icon: Widget Lab

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11035,4 +11035,5 @@
 	<item component="ComponentInfo{com.viessmann.vicare/com.viessmann.vicare.mobile.login.LoginActivity}" drawable="vicare" />
 	<item component="ComponentInfo{com.bt.bms.lk/com.movie.bms.splashscreen.SplashScreenActivity}" drawable="bookmyshow" />
 	<item component="ComponentInfo{com.joinhoney.honeyandroid/com.joinhoney.honeyandroid.SplashActivity}" drawable="paypal_honey" />
+	<item component="ComponentInfo{io.iftech.android.box/io.iftech.android.box.main.SplashActivity}" drawable="widget_lab" />
 </resources>
