--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -50,6 +50,7 @@
 	<item drawable="vicare" />
 	<item drawable="waking_up" />
 	<item drawable="walli" />
+	<item drawable="widget_lab" />
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
 	<item drawable="scoresquash" />
@@ -7558,6 +7559,7 @@
 	<item drawable="wick_editor" />
 	<item drawable="wickr" />
 	<item drawable="wide_launcher" />
+	<item drawable="widget_lab" />
 	<item drawable="wienmobil" />
 	<item drawable="wifi_analyzer" />
 	<item drawable="wifi_map" />
