--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -54,6 +54,7 @@
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
 	<item drawable="scoresquash" />
+	<item drawable="securid" />
 	<item drawable="sai_fdroid" />
 	<item drawable="forgetmenot" />
 	<item drawable="easy_xkcd" />
@@ -6287,6 +6288,7 @@
 	<item drawable="secure_vpn" />
 	<item drawable="securepoint" />
 	<item drawable="securew2" />
+	<item drawable="securid" />
 	<item drawable="secuso_minesweeper" />
 	<item drawable="seek" />
 	<item drawable="seeker" />
