new icon: Glorify

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -30,6 +30,7 @@
 	<item drawable="adblock_fast" />
 	<item drawable="albatross" />
 	<item drawable="fotmob" />
+	<item drawable="glorify" />
 	<item drawable="google_wear_os" />
 	<item drawable="memrise" />
 	<item drawable="microsoft_365" />
@@ -3638,6 +3639,7 @@
 	<item drawable="globeone" />
 	<item drawable="globible" />
 	<item drawable="globoplay" />
+	<item drawable="glorify" />
 	<item drawable="glovo" />
 	<item drawable="glowing_bear" />
 	<item drawable="gltool" />
