--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11037,4 +11037,5 @@
 	<item component="ComponentInfo{com.joinhoney.honeyandroid/com.joinhoney.honeyandroid.SplashActivity}" drawable="paypal_honey" />
 	<item component="ComponentInfo{io.iftech.android.box/io.iftech.android.box.main.SplashActivity}" drawable="widget_lab" />
 	<item component="ComponentInfo{com.rsa.securidapp/com.rsa.securidapp.ui.activity.SplashActivity}" drawable="securid" />
+	<item component="ComponentInfo{com.glorify.app/com.glorify.app.GlorifyActivity}" drawable="glorify" />
 </resources>
