new icon: Libra

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="dooz" />
 	<item drawable="foreground" />
 	<item drawable="gridle" />
+	<item drawable="libra" />
 	<item drawable="mintos" />
 	<item drawable="nova_video_player" />
 	<item drawable="paypal_honey" />
@@ -4363,6 +4364,7 @@
 	<item drawable="liapp" />
 	<item drawable="libby" />
 	<item drawable="libchecker" />
+	<item drawable="libra" />
 	<item drawable="librechair_launcher" />
 	<item drawable="librechair_settings" />
 	<item drawable="librelink" />
