--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11038,4 +11038,5 @@
 	<item component="ComponentInfo{io.iftech.android.box/io.iftech.android.box.main.SplashActivity}" drawable="widget_lab" />
 	<item component="ComponentInfo{com.rsa.securidapp/com.rsa.securidapp.ui.activity.SplashActivity}" drawable="securid" />
 	<item component="ComponentInfo{com.glorify.app/com.glorify.app.GlorifyActivity}" drawable="glorify" />
+	<item component="ComponentInfo{net.cachapa.libra/net.cachapa.libra.MainActivity}" drawable="libra" />
 </resources>
