new icon: InterPals

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11039,4 +11039,5 @@
 	<item component="ComponentInfo{com.rsa.securidapp/com.rsa.securidapp.ui.activity.SplashActivity}" drawable="securid" />
 	<item component="ComponentInfo{com.glorify.app/com.glorify.app.GlorifyActivity}" drawable="glorify" />
 	<item component="ComponentInfo{net.cachapa.libra/net.cachapa.libra.MainActivity}" drawable="libra" />
+	<item component="ComponentInfo{net.interpals/net.interpals.MainActivity}" drawable="interpals" />
 </resources>
