--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="dooz" />
 	<item drawable="foreground" />
 	<item drawable="gridle" />
+	<item drawable="interpals" />
 	<item drawable="libra" />
 	<item drawable="mintos" />
 	<item drawable="nova_video_player" />
@@ -4032,6 +4033,7 @@
 	<item drawable="integrity_checker" />
 	<item drawable="internet_speed_meter" />
 	<item drawable="internxt" />
+	<item drawable="interpals" />
 	<item drawable="intesa_investo" />
 	<item drawable="intesa_mobile" />
 	<item drawable="intra" />
