new icon: Wealthfront

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11040,4 +11040,5 @@
 	<item component="ComponentInfo{com.glorify.app/com.glorify.app.GlorifyActivity}" drawable="glorify" />
 	<item component="ComponentInfo{net.cachapa.libra/net.cachapa.libra.MainActivity}" drawable="libra" />
 	<item component="ComponentInfo{net.interpals/net.interpals.MainActivity}" drawable="interpals" />
+	<item component="ComponentInfo{com.wealthfront/com.wealthfront.MainActivity}" drawable="wealthfront" />
 </resources>
