--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -53,6 +53,7 @@
 	<item drawable="vicare" />
 	<item drawable="waking_up" />
 	<item drawable="walli" />
+	<item drawable="wealthfront" />
 	<item drawable="widget_lab" />
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
@@ -7510,6 +7511,7 @@
 	<item drawable="we__chat" />
 	<item drawable="we_energies" />
 	<item drawable="we_heart_it" />
+	<item drawable="wealthfront" />
 	<item drawable="wealthica" />
 	<item drawable="wealthsimple" />
 	<item drawable="wealthsimple_cash" />
