new icon: Hiking Project

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11041,4 +11041,5 @@
 	<item component="ComponentInfo{net.cachapa.libra/net.cachapa.libra.MainActivity}" drawable="libra" />
 	<item component="ComponentInfo{net.interpals/net.interpals.MainActivity}" drawable="interpals" />
 	<item component="ComponentInfo{com.wealthfront/com.wealthfront.MainActivity}" drawable="wealthfront" />
+	<item component="ComponentInfo{com.hikingproject.android/net.adventureprojects.android.activity.SplashActivity}" drawable="hiking_project" />
 </resources>
