--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="dooz" />
 	<item drawable="foreground" />
 	<item drawable="gridle" />
+	<item drawable="hiking_project" />
 	<item drawable="interpals" />
 	<item drawable="libra" />
 	<item drawable="mintos" />
@@ -3825,6 +3826,7 @@
 	<item drawable="hik_connect" />
 	<item drawable="hike" />
 	<item drawable="hiking_map" />
+	<item drawable="hiking_project" />
 	<item drawable="hill_climb" />
 	<item drawable="hill_climb_racing_2" />
 	<item drawable="hindu_calendar" />
