--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11042,4 +11042,5 @@
 	<item component="ComponentInfo{net.interpals/net.interpals.MainActivity}" drawable="interpals" />
 	<item component="ComponentInfo{com.wealthfront/com.wealthfront.MainActivity}" drawable="wealthfront" />
 	<item component="ComponentInfo{com.hikingproject.android/net.adventureprojects.android.activity.SplashActivity}" drawable="hiking_project" />
+	<item component="ComponentInfo{com.wave.personal/com.wave.customer.RootActivity}" drawable="wave" />
 </resources>
