--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -54,6 +54,7 @@
 	<item drawable="vicare" />
 	<item drawable="waking_up" />
 	<item drawable="walli" />
+	<item drawable="wave" />
 	<item drawable="wealthfront" />
 	<item drawable="widget_lab" />
 	<item drawable="zello" />
@@ -7502,6 +7503,7 @@
 	<item drawable="waterstones" />
 	<item drawable="watomatic" />
 	<item drawable="wattpad" />
+	<item drawable="wave" />
 	<item drawable="wave_calendar" />
 	<item drawable="wavelet" />
 	<item drawable="wawa" />
