--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11043,4 +11043,5 @@
 	<item component="ComponentInfo{com.wealthfront/com.wealthfront.MainActivity}" drawable="wealthfront" />
 	<item component="ComponentInfo{com.hikingproject.android/net.adventureprojects.android.activity.SplashActivity}" drawable="hiking_project" />
 	<item component="ComponentInfo{com.wave.personal/com.wave.customer.RootActivity}" drawable="wave" />
+	<item component="ComponentInfo{com.wwdfe.goog.wizardingworld/com.marathonapp.ui.splash.SplashActivity}" drawable="harry_potter_fan_club" />
 </resources>
