--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="dooz" />
 	<item drawable="foreground" />
 	<item drawable="gridle" />
+	<item drawable="harry_potter_fan_club" />
 	<item drawable="hiking_project" />
 	<item drawable="interpals" />
 	<item drawable="libra" />
@@ -3763,6 +3764,7 @@
 	<item drawable="harmonoid" />
 	<item drawable="harmony" />
 	<item drawable="harpy" />
+	<item drawable="harry_potter_fan_club" />
 	<item drawable="harry_potter_hogwarts_mystery" />
 	<item drawable="harvest" />
 	<item drawable="hash_checker" />
