new icon: holedown

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -18,6 +18,7 @@
 	<item drawable="gridle" />
 	<item drawable="harry_potter_fan_club" />
 	<item drawable="hiking_project" />
+	<item drawable="holedown" />
 	<item drawable="interpals" />
 	<item drawable="libra" />
 	<item drawable="mintos" />
@@ -3844,6 +3845,7 @@
 	<item drawable="hobi" />
 	<item drawable="hocus" />
 	<item drawable="holavpn" />
+	<item drawable="holedown" />
 	<item drawable="holo_launcher" />
 	<item drawable="holo_launcher_hd" />
 	<item drawable="home_assistant" />
