new icon: Digikala

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11045,4 +11045,5 @@
 	<item component="ComponentInfo{com.wave.personal/com.wave.customer.RootActivity}" drawable="wave" />
 	<item component="ComponentInfo{com.wwdfe.goog.wizardingworld/com.marathonapp.ui.splash.SplashActivity}" drawable="harry_potter_fan_club" />
 	<item component="ComponentInfo{com.grapefrukt.games.bore/com.unity3d.player.UnityPlayerActivity}" drawable="holedown" />
+	<item component="ComponentInfo{com.digikala.diagon/com.digikala.SplashActivity}" drawable="digikala" />
 </resources>
