--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11,6 +11,7 @@
 	<item drawable="bettersleep" />
 	<item drawable="burpy_walls" />
 	<item drawable="comviq" />
+	<item drawable="digikala" />
 	<item drawable="direct_express" />
 	<item drawable="disposable_camera" />
 	<item drawable="dooz" />
@@ -2948,6 +2949,7 @@
 	<item drawable="digi_ro" />
 	<item drawable="digical" />
 	<item drawable="digid" />
+	<item drawable="digikala" />
 	<item drawable="digilocker" />
 	<item drawable="digio" />
 	<item drawable="digital_clock_widget" />
