new icon: Biedronka

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9,6 +9,7 @@
 	<item drawable="ad_free" />
 	<item drawable="anpaside" />
 	<item drawable="bettersleep" />
+	<item drawable="biedronka" />
 	<item drawable="burpy_walls" />
 	<item drawable="comviq" />
 	<item drawable="digikala" />
@@ -2191,6 +2192,7 @@
 	<item drawable="bible" />
 	<item drawable="bible_energy" />
 	<item drawable="bible_project" />
+	<item drawable="biedronka" />
 	<item drawable="bienestar_azteca" />
 	<item drawable="big_font" />
 	<item drawable="big_font_enlarge_font" />
