new icon: Fred Meyer

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11047,4 +11047,5 @@
 	<item component="ComponentInfo{com.grapefrukt.games.bore/com.unity3d.player.UnityPlayerActivity}" drawable="holedown" />
 	<item component="ComponentInfo{com.digikala.diagon/com.digikala.SplashActivity}" drawable="digikala" />
 	<item component="ComponentInfo{pl.jmpolska.clos0.mojabiedronka/pl.jmpolska.clos0.mojabiedronka.MainActivity}" drawable="biedronka" />
+	<item component="ComponentInfo{com.fredmeyer.mobile/com.kroger.mobile.BannerSelectionActivity}" drawable="fred_meyer" />
 </resources>
