--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -37,6 +37,7 @@
 	<item drawable="adblock_fast" />
 	<item drawable="albatross" />
 	<item drawable="fotmob" />
+	<item drawable="fred_meyer" />
 	<item drawable="glorify" />
 	<item drawable="google_wear_os" />
 	<item drawable="memrise" />
@@ -3493,6 +3494,7 @@
 	<item drawable="franceinfo" />
 	<item drawable="franco_kernel_manager" />
 	<item drawable="franco_kernel_updater" />
+	<item drawable="fred_meyer" />
 	<item drawable="free_fire" />
 	<item drawable="free_fire_max" />
 	<item drawable="free_now_driver" />
