new icon: Deutscher Bundestag

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11048,4 +11048,5 @@
 	<item component="ComponentInfo{com.digikala.diagon/com.digikala.SplashActivity}" drawable="digikala" />
 	<item component="ComponentInfo{pl.jmpolska.clos0.mojabiedronka/pl.jmpolska.clos0.mojabiedronka.MainActivity}" drawable="biedronka" />
 	<item component="ComponentInfo{com.fredmeyer.mobile/com.kroger.mobile.BannerSelectionActivity}" drawable="fred_meyer" />
+	<item component="ComponentInfo{de.bundestag.android/de.bundestag.android.screens.splash.SplashActivity}" drawable="deutscher_bundestag" />
 </resources>
