--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -12,6 +12,7 @@
 	<item drawable="biedronka" />
 	<item drawable="burpy_walls" />
 	<item drawable="comviq" />
+	<item drawable="deutscher_bundestag" />
 	<item drawable="digikala" />
 	<item drawable="direct_express" />
 	<item drawable="disposable_camera" />
@@ -2919,6 +2920,7 @@
 	<item drawable="despegar" />
 	<item drawable="destiny" />
 	<item drawable="destiny_item_manager" />
+	<item drawable="deutscher_bundestag" />
 	<item drawable="deutsches_worterbuch" />
 	<item drawable="dev__rant" />
 	<item drawable="dev_community" />
