new icon: Cineworld Cinemas

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11,6 +11,7 @@
 	<item drawable="bettersleep" />
 	<item drawable="biedronka" />
 	<item drawable="burpy_walls" />
+	<item drawable="cineworld_cinemas" />
 	<item drawable="comviq" />
 	<item drawable="deutscher_bundestag" />
 	<item drawable="digikala" />
@@ -2586,6 +2587,7 @@
 	<item drawable="cinematics" />
 	<item drawable="cinemaxx" />
 	<item drawable="cinepolis" />
+	<item drawable="cineworld_cinemas" />
 	<item drawable="circles_life" />
 	<item drawable="circloo" />
 	<item drawable="circuit" />
