--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11049,4 +11049,5 @@
 	<item component="ComponentInfo{pl.jmpolska.clos0.mojabiedronka/pl.jmpolska.clos0.mojabiedronka.MainActivity}" drawable="biedronka" />
 	<item component="ComponentInfo{com.fredmeyer.mobile/com.kroger.mobile.BannerSelectionActivity}" drawable="fred_meyer" />
 	<item component="ComponentInfo{de.bundestag.android/de.bundestag.android.screens.splash.SplashActivity}" drawable="deutscher_bundestag" />
+	<item component="ComponentInfo{com.cineworld.app/com.cineworld.app.mvc.controllers.base.activity.AppContainerActivity}" drawable="cineworld_cinemas" />
 </resources>
