new icon: Renpho

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11050,4 +11050,5 @@
 	<item component="ComponentInfo{com.fredmeyer.mobile/com.kroger.mobile.BannerSelectionActivity}" drawable="fred_meyer" />
 	<item component="ComponentInfo{de.bundestag.android/de.bundestag.android.screens.splash.SplashActivity}" drawable="deutscher_bundestag" />
 	<item component="ComponentInfo{com.cineworld.app/com.cineworld.app.mvc.controllers.base.activity.AppContainerActivity}" drawable="cineworld_cinemas" />
+	<item component="ComponentInfo{com.qingniu.renpho/com.renpho.app.main.view.activity.LauncherActivity}" drawable="renpho" />
 </resources>
