--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -30,6 +30,7 @@
 	<item drawable="paypal_honey" />
 	<item drawable="permission_manager_x" />
 	<item drawable="qserv" />
+	<item drawable="renpho" />
 	<item drawable="secuso_minesweeper" />
 	<item drawable="seterra" />
 	<item drawable="shiori" />
@@ -6056,6 +6057,7 @@
 	<item drawable="remote_fingerprint_unlock" />
 	<item drawable="remote_mouse" />
 	<item drawable="renfe" />
+	<item drawable="renpho" />
 	<item drawable="renshuu" />
 	<item drawable="reolink" />
 	<item drawable="repainter" />
