new icon: Artifact

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11051,4 +11051,5 @@
 	<item component="ComponentInfo{de.bundestag.android/de.bundestag.android.screens.splash.SplashActivity}" drawable="deutscher_bundestag" />
 	<item component="ComponentInfo{com.cineworld.app/com.cineworld.app.mvc.controllers.base.activity.AppContainerActivity}" drawable="cineworld_cinemas" />
 	<item component="ComponentInfo{com.qingniu.renpho/com.renpho.app.main.view.activity.LauncherActivity}" drawable="renpho" />
+	<item component="ComponentInfo{ai.nokto.wire/ai.nokto.wire.MainActivity}" drawable="artifact" />
 </resources>
