--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,6 +8,7 @@
 	<item drawable="alkitab" />
 	<item drawable="ad_free" />
 	<item drawable="anpaside" />
+	<item drawable="artifact" />
 	<item drawable="bettersleep" />
 	<item drawable="biedronka" />
 	<item drawable="burpy_walls" />
@@ -1927,6 +1928,7 @@
 	<item drawable="arrow_launcher" />
 	<item drawable="arte" />
 	<item drawable="artfol" />
+	<item drawable="artifact" />
 	<item drawable="artstation" />
 	<item drawable="arubacloud" />
 	<item drawable="arvest_go" />
