new icon: Lucky Financial

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -26,6 +26,7 @@
 	<item drawable="holedown" />
 	<item drawable="interpals" />
 	<item drawable="libra" />
+	<item drawable="lucky_financial" />
 	<item drawable="mintos" />
 	<item drawable="nova_video_player" />
 	<item drawable="paypal_honey" />
@@ -4517,6 +4518,7 @@
 	<item drawable="luca" />
 	<item drawable="luci" />
 	<item drawable="lucid_launcher" />
+	<item drawable="lucky_financial" />
 	<item drawable="lucky_patcher" />
 	<item drawable="ludo_king" />
 	<item drawable="lufthansa" />
