--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11052,4 +11052,5 @@
 	<item component="ComponentInfo{com.cineworld.app/com.cineworld.app.mvc.controllers.base.activity.AppContainerActivity}" drawable="cineworld_cinemas" />
 	<item component="ComponentInfo{com.qingniu.renpho/com.renpho.app.main.view.activity.LauncherActivity}" drawable="renpho" />
 	<item component="ComponentInfo{ai.nokto.wire/ai.nokto.wire.MainActivity}" drawable="artifact" />
+	<item component="ComponentInfo{com.dsquares.lucky/com.dsquares.lucky.screens.mainscreens.single.SingleLuckyActivity}" drawable="lucky_financial" />
 </resources>
